--- a/shelter/sass/pages/pets.sass
+++ b/shelter/sass/pages/pets.sass
@@ -65,6 +65,7 @@
         .pet-card:nth-last-child(-n+2)
             display: none 
     @include media-mobile
+        max-width: 300px
         .pet-card:nth-last-child(-n+5)
                 display: none 
     .pet-card
